fix wtt person alignment

--- a/aliem/styles/collections/avada/person.styl
+++ b/aliem/styles/collections/avada/person.styl
@@ -1,6 +1,6 @@
 .fusion-person
     .person-img
-        max-height: 150px
+        max-width: 275px
     .person-desc
         .person-author
             .person-author-wrapper
